# bumpversion-slim

./: .coverage  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: style.yml  tests.yml
configuration/: index.html
docs/: configuration.md  hooks.md  index.md  usage.md
hooks/: index.html
search/: search_index.json
src/bumpversion_slim/: bump.py  cli.py  config.py  context.py  errors.py  git.py
tests/: conftest.py  test_bump.py  test_cli.py  test_config.py  test_context.py  test_git.py
usage/: index.html
