[project]
name = "bumpversion-slim"
version = "0.1.0"
description = "A lightweight tool to bump package versions"
authors = [
    { name = "Daniel Edgecombe", email = "daniel@nrwl.co" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gitpython",
    "rtoml",
    "typer-slim < 0.22",
]

[tool.bumpversion]
current_version = "1.2.3"
allow_missing = true

[project.optional-dependencies]
test = [
    # Tests
    "freezegun >= 1.2.1",
    "pytest >= 9.0.0",
    "pytest-cov >= 7.0.0",
    "pytest-random-order >= 1.2.0",
    "pytest-git >=1.7.0,<1.8",
    "path >= 16,<17",
    "pytest-httpx >= 0.36.0",
]

dev = [
    # Style
    "ruff >= 0.14.10",
    "pre-commit >= 3.0.2",
    "ty>=0.0.17",
]

[project.scripts]
bumpversion = "bumpversion_slim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
