[project]
name = "bumpversion-slim"
version = "0.1.0"
description = "A lightweight tool to bump package versions"
authors = [
    { name = "Daniel Edgecombe", email = "daniel@nrwl.co" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gitpython>=3.1.46",
    "rtoml>=0.13.0",
]

[tool.bumpversion]
current_version = "0.1.0"
allow_missing = true

[project.optional-dependencies]
test = [
    # Tests
    "freezegun >= 1.2.1",
    "pytest >= 9.0.0",
    "pytest-cov >= 7.0.0",
    "pytest-random-order >= 1.2.0",
    "pytest-git >=1.7.0,<1.8",
    "path >= 16,<17",
    "pytest-httpx >= 0.36.0",
]

dev = [
    # Style
    "ruff >= 0.14.10",
    "pre-commit >= 3.0.2",
    "ty>=0.0.17",
]

[project.scripts]
bumpversion = "bumpversion_slim.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D107",
    "FIX",  # allow TODO
    "E501",  # Handled by ruff format
    "T201",
]

# [tool.ruff.lint.per-file-ignores]
# "tasks.py" = ["ANN", "E501", "INP001"]
# "changelog_gen/cli/command.py" = ["UP007", "B008"]
# "tests/*" = ["ANN", "D", "S105", "S106", "SLF001", "S101", "PLR0913"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["tests/*"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
