[project]
name = "bumpversion-slim"
version = "0.1.1"
description = "A lightweight tool to bump package versions"
authors = [
    { name = "Daniel Edgecombe", email = "daniel@nrwl.co" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gitpython>=3.1.46",
    "rtoml>=0.13.0",
]


[project.optional-dependencies]
test = [
    # Tests
    "freezegun >= 1.2.1",
    "pytest >= 9.0.0",
    "pytest-cov >= 7.0.0",
    "pytest-random-order >= 1.2.0",
    "pytest-git >=1.7.0,<1.8",
    "path >= 16,<17",
    "pytest-httpx >= 0.36.0",
]

dev = [
    # Style
    "ruff >= 0.14.10",
    "prek>=0.3.4",
    "ty>=0.0.17",

    # Release
    "git-cliff>=2.12.0",
]

[project.scripts]
bumpversion = "bumpversion_slim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--random-order",
    "-p no:logging",
]
filterwarnings = [
]
markers = [
    "backwards_compat: marks tests as part of backwards compatibility checks.",
]

[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if t.TYPE_CHECKING:",
    'warn',
]

[tool.coverage.run]
branch = true
source = ["src/bumpversion_slim"]

[tool.ruff]
line-length = 120
target-version = "py310"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D107",
    "FIX",  # allow TODO
    "E501",  # Handled by ruff format
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001"]
"tests/*" = ["ANN", "D", "S105", "S106", "SLF001", "S101", "PLR0913"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["tests/*"]

[tool.bumpversion]
current_version = "0.1.1"
allow_dirty = true
allow_missing = true
commit_extra = ["CHANGELOG.md"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.git-cliff.bump]
features_always_bump_minor = false
breaking_always_bump_major = false
initial_tag = "0.1.0"

[tool.git-cliff.changelog]
header = """
# Changelog\n
"""
body = """
{% if version %}\
    ## {{ version  }} (released {{ timestamp | date(format="%Y-%m-%d") }})
{% else %}\
    ## Unreleased
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {% if commit.breaking %}**Breaking:** {% endif %}\
        {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
        {%- if commit.links %} ({% for link in commit.links %}[{{link.text}}]({{link.href}}){% endfor -%}) {% endif %}\
        [[{{ commit.id | truncate(length=7, end="") }}](https://github.com/NRWLDev/bumpversion-slim/commit/{{ commit.id }})]\
    {% endfor %}
{% endfor %}\n
"""
trim = true
footer = "<!-- generated by git-cliff -->"

[tool.git-cliff.git]
link_parsers = [
    { pattern = "#(\\d+)", href = "https://github.com/NRWLDev/bumpversion-slim/issues/$1"},
]

commit_preprocessors = [
  # Remove issue numbers.
  { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]

commit_parsers = [
    { message = "^feat", group = "Features and Improvements" },
    { message = "^fix", group = "Bug fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^refactor", group = "Miscellaneous" },
    { message = "^style", group = "Miscellaneous" },
    { message = "^test", group = "Miscellaneous" },
    { message = "^chore", group = "Miscellaneous" },
]
sort_commits = "newest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
